--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>Mike's Truly, Terribly, Hyperbolically Awful Blog!</h1>
-    <h2>"Sharing My Thoughts, Whether You Want To Hear Them Or Not!</h2>
+    <h2>Sharing My Thoughts, Whether You Want To Hear Them Or Not!</h2>
 </body>
 </html>
