--- a/index.html
+++ b/index.html
@@ -6,5 +6,24 @@
 <body>
     <h1>Mike's Truly, Terribly, Hyperbolically Awful Blog!</h1>
     <h2>Sharing My Thoughts, Whether You Want To Hear Them Or Not!</h2>
+
+    <h2>Week One</h2>
+    <h3>The struggle, as they say, is real.  And as the introductory materials
+        promised, I did indeed encounter deep feelings of discomfort.  A few 
+        days ago, I might have come off as a deal more cocky about how this
+        whole process was going to go for me.  I don't feel that way now, 
+        that's for sure.
+        But that's a good thing.  It means I've learned the reality of what
+        it's going to take to get through.  And it also means I've learned 
+        enough that I can reasonably expect someone to see this message
+        on teh inturnetz.  
+        Put in briefer terms, my biggest struggle this week has been against
+        my own foibles.  Oh, and the abstractness of much of the material.
+        Can't forget that.
+        So no, the experience hasn't been quite what I expected, but it didn't 
+        break me either.  And now that I'm here, I'm very much looking 
+        forward to exploring the logical side of things with pseudo-coding, 
+        which I think may help things flow a little smoother in future.
+    </h3>
 </body>
 </html>
