edited title, subtitle, and week one content.

--- a/index.html
+++ b/index.html
@@ -4,26 +4,28 @@
     <title>Mike's Truly, Terribly, Hyperbolically Awful Blog</title>
 </head>
 <body>
-    <h1>Mike's Truly, Terribly, Hyperbolically Awful Blog!</h1>
-    <h2>Sharing My Thoughts, Whether You Want To Hear Them Or Not!</h2>
+    <h1>Mike's Truly, Terribly, Hyperbolically Awful Blog! (Title Pending)</h1>
+    <h2>A Work In Progress</h2>
 
     <h2>Week One</h2>
-    <h3>The struggle, as they say, is real.  And as the introductory materials
-        promised, I did indeed encounter deep feelings of discomfort.  A few 
-        days ago, I might have come off as a deal more cocky about how this
-        whole process was going to go for me.  I don't feel that way now, 
-        that's for sure.
-        But that's a good thing.  It means I've learned the reality of what
-        it's going to take to get through.  And it also means I've learned 
-        enough that I can reasonably expect someone to see this message
-        on teh inturnetz.  
-        Put in briefer terms, my biggest struggle this week has been against
-        my own foibles.  Oh, and the abstractness of much of the material.
-        Can't forget that.
-        So no, the experience hasn't been quite what I expected, but it didn't 
-        break me either.  And now that I'm here, I'm very much looking 
-        forward to exploring the logical side of things with pseudo-coding, 
-        which I think may help things flow a little smoother in future.
+    <h3>The struggle, as they say, is real.  If I had to characterize my 
+        experience in one word, it would be "stressful."  I didn't know
+        what to expect, and generally try to avoid expectations in favor of
+        anticipation, but I was nonetheless thrown somewhat for a loop.
+        That's not necessarily a bad thing, though.  It means I've learned 
+        the reality of what I'm in for, which means I can now set my
+        expectations accordingly.  And this page should be evidence enough
+        that I managed to grasp some programming basics as well. 
+        The introductory materials did not disappoint in what they predicted.
+        I did want to quit, a couple different times.  But now I'm glad I didn't.
+        The material wasn't as hard as I'd convinced myself it was.  And 
+        though my page will be far from complete, or even "nice" for that 
+        matter, for demo, it is at least a beginning, and I am happy 
+        enough with that for now.  
+        They say the scariest thing for artists and writers is a blank page.
+        I think the same thing is true for programming.  Having now put pen 
+        to paper, if you will, the hardest part is done.  I look forward to
+        learning more, the better to build on this beginning.
     </h3>
 </body>
 </html>
