added charset utf-8

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Mike's Truly, Terribly, Hyperbolically Awful Blog</title>
+    <meta charset="utf-8">
 </head>
 <body>
     <h1>Mike's Truly, Terribly, Hyperbolically Awful Blog! (Title Pending)</h1>
