added stylesheet and linked html doc to it git status

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Mike's Truly, Terribly, Hyperbolically Awful Blog</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="styles.css/"
 </head>
 <body>
     <h1>Mike's Truly, Terribly, Hyperbolically Awful Blog! (Title Pending)</h1>
