--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <sidebar>
 
-        <img src="https://vignette.wikia.nocookie.net/lotr/images/e/e7/Gandalf_the_Grey.jpg/revision/latest/top-crop/width/360/height/450?cb=20121110131754" title="Suspicious Gandalf is suspicious.">
+        <img src="https://vignette.wikia.nocookie.net/lotr/images/e/e7/Gandalf_the_Grey.jpg/revision/latest/top-crop/width/360/height/450?cb=20121110131754" alt="Suspicious Gandalf is suspicious.">
 
     </sidebar>
 
