added new pages, links to new pages

--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
 <body>
 
     <header>
-        <h1>Mike's Truly, Terribly, Hyperbolically, <class="special">Incomprehensibly</class>, Awful Blog! (Title Pending)</h1>
+        <h1>Mike's Truly, Terribly, Hyperbolically, Incomprehensibly, Awful Blog! (Title Pending)</h1>
         <h2>A Work In Progress</h2>
     </header>
 
     <nav>
         <ul>
-            <li><span>Home</span></li>
-            <li>Posts (placeholder)</li>
+            <li><span><strong>Home</strong></span></li>
+            <li><a href= "posts.html"><strong>Posts</strong></a></li>
+            <li><a href= "projects.html"><strong>Projects</strong></a></li>
+            <li><a href= "links.html"><strong>Links</strong></a></li>
         </ul>    
     </nav>  
     
