--- a/posts.html
+++ b/posts.html
@@ -24,6 +24,50 @@
         </ul>    
     </nav> 
 
+    <main>
+        <h2>Week One</h2>
+        <p>The struggle, as they say, is real.  If I had to characterize my 
+            experience in one word, it would be "stressful."  I didn't know
+            what to expect, and generally try to avoid expectations in favor of
+            anticipation, but I was nonetheless thrown somewhat for a loop.<br>
+            That's not necessarily a bad thing, though.  It means I've learned 
+            the reality of what I'm in for, which means I can now set my
+            expectations accordingly.  And this page should be evidence enough
+            that I managed to grasp some programming basics as well.<br> 
+            The introductory materials did not disappoint in what they predicted.
+            I did want to quit, a couple different times.  But now I'm glad I didn't.
+            The material wasn't as hard as I'd convinced myself it was.  And 
+            though my page will be far from complete, or even "nice" for that 
+            matter, for demo, it is at least a beginning, and I am happy 
+            enough with that for now.<br>  
+            They say the scariest thing for artists and writers is a blank page.
+            I think the same thing is true for programming.  Having now put pen 
+            to paper, if you will, the hardest part is done.  I look forward to
+            learning more, the better to build on this beginning.
+        </p>
+
+        <h2>Week Two</h2>
+        <p>In general, the second week has, for me, gone more smoothly than 
+            the first.  Somehow, I felt like I had more time to do what I 
+            needed to do.  That's not to say it was without stress, but I 
+            suppose that's fairly normal when learning and applying new
+            things.<br>
+            The excercise in Pseudocoding proved to be an interesting one.
+            It is a part of the practice of programming that I never knew
+            existed until just recently, though in retrospect it makes a 
+            lot of sense that one would try to break up a problem into 
+            component parts.  I was happy to discover that this logical
+            excercise played to my strengths as a philosophy student, and 
+            thereby did not throw me off much at all.  It was still a challenge,
+            certainly, but one which I was equipped in advance to handle.<br>
+            Though it did help that I got to pick my project.  I always enjoy that.<br>
+            As before, I remain interested to see how new materials
+            will allow us to build on what's already been done.
+        </p>
+
+    </main>
+
+
 </body>
 
 </html>
