added week three post, made changes to styling, added welcome message to front page

--- a/links.html
+++ b/links.html
@@ -6,13 +6,21 @@
     <title>Mike's Hyperbolically Awful Links</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .special {color: red;}
+        h1, h2, p {text-align: center;}
+        .navbg {
+            background-color: goldenrod;
+        }
+    </style>
 </head>
 
 <body>
 
-    <h1>Mike's Hyperbolically Awful Links</h1>
-    <h2>Or: One does not simply visit Mordor</h2>
+    <h1>Mike's Hyperbolically <div class="special">Awful</div> Links</h1>
+    <h2>Where Are We Going?  Somewhere Horrible.</h2>
 
+    <div class="navbg">
     <nav>
         <ul>
             <li><span><a href="index.html"><strong>Home</strong></a></span></li>
@@ -21,6 +29,7 @@
             <li><strong>Links</strong></li>
         </ul>    
     </nav> 
+    </div>
 
 </body>
 
