--- a/posts.html
+++ b/posts.html
@@ -6,15 +6,26 @@
     <title>Mike's Truly Awful Posts</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .special {color: red;}
+        h1, h2, p {text-align: center;}
+        .maintext {
+            column-count: 1;
+        }
+        .navbg {
+            background-color: goldenrod;
+        }
+    </style>
 </head>
 
 <body>
 
     <header>
-        <h1>Mike's Truly Awful Posts</h1>
-        <h2>Or: Unasked-for Feelings and Opinions</h2>
+        <h1>Mike's Truly <div class="special">Awful</div> Posts</h1>
+        <h2>Unasked-for Feelings and Opinions</h2>
     </header>
 
+    <div class="navbg">
     <nav>
         <ul>
             <li><span><a href="index.html"><strong>Home</strong></a></span></li>
@@ -23,8 +34,10 @@
             <li><a href= "links.html"><strong>Links</strong></a></li>
         </ul>    
     </nav> 
+    </div>
 
     <main>
+        <div class="maintext">
         <h2>Week One</h2>
         <p>The struggle, as they say, is real.  If I had to characterize my 
             experience in one word, it would be "stressful."  I didn't know
@@ -65,6 +78,30 @@
             will allow us to build on what's already been done.
         </p>
 
+        <h2>Week Three</h2>
+        <p>So this week started out maybe more stressful than the first.  Not sure 
+            if it was something in the water or what, but from the end of last week,
+            it seemed as though any confidence had gone straight out of me. <br>
+            Thankfully, I was able to learn (all over again) that asking for help is
+            my best weapon through this process.  I think that maybe my biggest 
+            challenge is that I'm no longer used to pursuing things past the point of
+            being bad at them, and what I've experienced are the growing pains of
+            growing into that role of student again.  Whatever things I've learned in 
+            the last few years have mostly been simple and easy to get used to.  Hard 
+            things, as I'm relearning, are hard.<br>
+            The hard work is slowly starting to pay off, too.  While it's still true
+            that I don't necessarily grasp everything on the first, or even second, 
+            attempt, I do grasp more now than I did at the beginning, and I think I'm 
+            starting to become used to the idea of experimenting around to find a workable
+            solution to my coding problems.  Still, must always remind myself to seek 
+            help when I'm driving myself mad.  For this week, there are some who certainly
+            have earned a shout-out for their invaluable assistance (they know who they are!).<br>
+            So again I find myself in the position of saying that, having wanted to quit,
+            I'm once more glad that I did not.  And not to sound too egomaniacal, but I'm 
+            now looking forward to seeing what I can overcome next.
+
+        </p>
+    </div>
     </main>
 
 
