--- a/projects.html
+++ b/projects.html
@@ -6,15 +6,23 @@
     <title>Mike's Terribly Awful Projects</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .special {color: red;}
+        h1, h2, p {text-align: center;}
+        .navbg {
+            background-color: goldenrod;
+        }
+    </style>
 </head>
 
 <body>
 
     <header>
-        <h1>Mike's Terribly Awful Projects</h1>
-        <h2>Or: Things You'll Wish You Never Saw</h2>
+        <h1>Mike's Terribly <div class="special">Awful</div> Projects</h1>
+        <h2>Cannot Unsee!</h2>
     </header>
 
+    <div class="navbg">
     <nav>
         <ul>
             <li><span><a href="index.html"><strong>Home</strong></a></span></li>
@@ -23,6 +31,7 @@
             <li><a href= "links.html"><strong>Links</strong></a></li>
         </ul>    
     </nav> 
+    </div>
 
 </body>
 
