week four updates

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <title>Mike's Truly, Terribly, Certifiably, Hyperbolically, Incomprehensibly, Awful Blog</title>
+    <title>Mike's Truly, Terribly, Certifiably, Hyperbolically, Incomprehensibly, Painfully, Awful Blog</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
     <style>
@@ -20,7 +20,7 @@
 <body>
 
     <header>
-        <h1>Mike's Truly, Terribly, Certifiably, Hyperbolically, Incomprehensibly, <div class=special>Awful</div> Blog! (Title Pending)</h1>
+        <h1>Mike's Truly, Terribly, Certifiably, Hyperbolically, Incomprehensibly, Painfully, <div class=special>Awful</div> Blog! (Title Pending)</h1>
         <h2>A Work In Progress</h2>
     </header>
     
