--- a/links.html
+++ b/links.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="styles.css">
     <style>
         .special {color: red;}
-        h1, h2, p {text-align: center;}
+        h1, h2, h3, p {text-align: center;}
         .navbg {
             background-color: goldenrod;
+        }
+        .maintext {
+            column-count: 1;
         }
     </style>
 </head>
@@ -30,6 +33,18 @@
         </ul>    
     </nav> 
     </div>
+
+    <main>
+        <div class="maintext">
+        <h3>Find me at these fine places:</h3> 
+        <ul>
+            <li><a href="https://github.com/mgaren01">Github</a></li>
+            <li><a href="https://www.linkedin.com/in/michael-garen-967b44aa/?trk=people-guest_people_search-card">LinkedIn</a> (so, so out of date)</li>
+            <li><a href="https://www.codewars.com/users/mgaren01">Codewars</a></li>
+            <li><a href="https://sovereignstudio.wordpress.com/">Sovereign Studio</a> (art!)</li>
+        </ul>
+        </div>
+    </main>
 
 </body>
 
