--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,9 @@
         .navbg {
             background-color: goldenrod;
         }
+        .maintext {
+            column-count: 1;
+        }
     </style>
 </head>
 
@@ -32,6 +35,21 @@
         </ul>    
     </nav> 
     </div>
+
+    <main>
+        <div class="maintext">
+        <ul>
+            <li><a href="https://mgaren01.github.io/timer/">Countdown to Doom! (timer)</a></li>
+            <li><a href="https://mgaren01.github.io/digitalclock/">Digital Clock</a></li>
+            <li><a href="https://mgaren01.github.io/gallery/">Gallery (with bonus image!)</a></li>
+            <li><a href="https://mgaren01.github.io/splash-page/">Splash Page</a></li>
+            <li><a href="https://mgaren01.github.io/silly-story/">Silly Story Generator (with bonus content!)</a></li>
+            <li><a href="https://mgaren01.github.io/structure-asst./">Structure (bugged)</a></li>
+            <li><a href="https://github.com/mgaren01/pseudocode/blob/master/pseudocode.md">Pseudocode</a></li>
+            <li><a href="https://mgaren01.github.io/markup-asst./">Markup</a></li>
+        </ul>
+        </div>
+    </main>
 
 </body>
 
