--- a/posts.html
+++ b/posts.html
@@ -99,7 +99,31 @@
             So again I find myself in the position of saying that, having wanted to quit,
             I'm once more glad that I did not.  And not to sound too egomaniacal, but I'm 
             now looking forward to seeing what I can overcome next.
+        </p>
 
+        <h2>Week Four</h2>
+        <p>This has been a much better week.  After a rocky start on Monday,
+            I rediscovered the benefits of actually being on-site, and the 
+            immediacy of assistance.  It's probably not exaggerating by much
+            at all to suggest that I may not have completed my projects this 
+            week if I had not left the house.  Thankfully, it seems to be finally
+            sinking in for me that help is not only available, but is desirable 
+            to seek out.<br>
+            Now that my work and support habits/needs are more in order, it's a
+            deal easier to have a little fun.  I still find javascript to be a 
+            bit of a pain, but I suppose that's to be expected when learning 
+            a new language in tandem with a new way to structure one's 
+            thinking.  It being a pain does not, however, suggest that I'm not 
+            starting to get it; while, starting out, it was easy enough to 
+            identify an individual expression, now it's getting easier to identify
+            what the expression is <em>saying</em>.  And not to beat a dead horse,
+            but I would probably not be where I am without help (which I reiterate
+            mostly for my own benefit).  <br>
+            I'm happy to say that I have very few misgivings about going forward 
+            into full-time.  I eagerly anticipate a larger one-to-one environment, 
+            with lots of people to bounce ideas off of and generally collaborate
+            with.  <br>   
+            See you next week!
         </p>
     </div>
     </main>
