--- a/posts.html
+++ b/posts.html
@@ -125,6 +125,31 @@
             with.  <br>   
             See you next week!
         </p>
+
+        <h2>Week Five (Full-Time Week One)</h2>
+        <p>The setting makes the difference.  I know I've already said it, but the 
+            whole work-from-home deal was just not doing it for me.  Actually being 
+            in the office, and now actually having a bunch of people around as well, 
+            is a game-changer.  And as I get more comfortable with everyone, everything 
+            else seems to be flowing that much smoother.<br>
+            That's not to say things haven't still been challenging, because they have.
+            The weight of the challenge, however, is slowly becoming subsumed by the
+            enjoyment of figuring something out and applying it.  Case in point: this week's 
+            projects provided a nice mix of creative and logical challenges that overlapped
+            well, and the local network of support made solving the various problems that 
+            arose a deal less arduous.  Though it was always clear that I should reach out 
+            for help if I needed it, I didn't always feel right about seeking guidance.<br>
+            Weirdly, being in-person seems to have taken the ego out of it for me.  Id've 
+            thought the reverse.  <br>
+            I can't go without mentioning the session in the park with Dr. Luke, which was 
+            a very positive experience.  Having the words to describe my goals in showing 
+            up every day makes the hard parts a little easier to put up with.  Rather than 
+            laboring in the service of some vague potential that's "over there," I now have
+            something more solid to latch onto.  <br>
+            I think that about does it for now.  I'm looking forward to converting this blog
+            over to bootstrap, and generally getting my hands dirty elsewhere. <br>
+            Until next time.
+        </p>
     </div>
     </main>
 
